--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Ignore downloaded datasets
 embeddings/data/
 embeddings/text8.zip
+embeddings/checkpoints/
 face_generation/data/
 
 .ipynb_checkpoints/
